--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#43B781" />
     <meta
       name="description"
       content="WorkoutHome helps you train at home"
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>WorkoutHome</title>
+    <title>Homey Training</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
