Component AddToHomeScreen; starting saved lists; general improvements

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#43B781" />
+    <meta name="theme-color" content="#f06969" />
     <meta
       name="description"
-      content="WorkoutHome helps you train at home"
+      content="Homey Traning helps you workout at home"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
